--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -1,5 +1,5 @@
-{{- $name := "Felipe Santos" -}}
-{{- $email := "felipecassiors@gmail.com" -}}
+{{- $name := "mingster" -}}
+{{- $email := "mingster.tsai@gmail.com" -}}
 
 {{- $chezmoiForce := or (has "--force" .chezmoi.args) (has "--force=true" .chezmoi.args) -}}
 {{- $interactive := and stdinIsATTY (not $chezmoiForce) -}}
